--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -18,7 +18,7 @@
         <ul class="team-list">
           <li class="team-item">
             <a href="https://github.com/VKoshovec"
-              ><img class="team-img" src="/src/images/1.png" alt="Учасник"
+              ><img class="team-img" src="/src/images/koshov.jpg" alt="Учасник"
             /></a>
             <div class="team-block">
               <p class="team-name">Володимир</p>
@@ -115,7 +115,10 @@
           </li>
           <li class="team-item">
             <a href="https://github.com/go-doc-web"
-              ><img class="team-img" src="/src/images/1.png" alt="Учасник"
+              ><img
+                class="team-img"
+                src="/src/images/hubskyi.jpg"
+                alt="Учасник"
             /></a>
             <div class="team-block">
               <p class="team-name">Олег Губський</p>
