--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -22,11 +22,11 @@
 .film-list__item {
     display: flex;
     justify-content: center;
-    flex-grow: 1;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    margin-right: 0;
-    margin-left: 0;
+    // height: 100%;
+    // margin-right: auto;
+    // margin-left: auto;
     border-radius: 5px;
     overflow: hidden;
 
@@ -40,6 +40,7 @@
 
     @media screen and (min-width: 1280px) {
         width: calc((100% - 32px) / 3);
+        // height: 634px;
     }
 }
 
@@ -50,6 +51,8 @@
 }
 
 .film-list__link {
+    // display: flex;
+    // flex-direction: column;  
     width: 100%;
     height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -57,6 +60,12 @@
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
     }
+}
+
+.film-list__top-wrap {
+    flex-grow: 1;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .film-data {
@@ -67,6 +76,8 @@
         
     @media screen and (min-width: 1280px) {
         height: 48px; 
+        // display: flex;
+        flex-grow: 1;
     }
 }
 
@@ -82,7 +93,7 @@
     color: #000000;
 
     @media screen and (min-width: 1280px) {
-        font-size: 20px;
+        font-size: 15px;
         line-height: 1.2px;
     }
 }
@@ -99,7 +110,7 @@
 
     @media screen and (min-width: 1280px) {
         height: 20px;
-        font-size: 20px;
+        font-size: 15px;
         line-height: 1.2px;
     }
 }
@@ -116,7 +127,7 @@
 
     @media screen and (min-width: 1280px) {
         align-items: flex-end;
-        font-size: 20px;
+        font-size: 15px;
         line-height: 1.2px;
     }
 }
@@ -135,7 +146,7 @@
 
     @media screen and (min-width: 1280px) {
         align-items: flex-end;
-        font-size: 20px;
+        font-size: 15px;
         line-height: 1.2px;
     }
 }
