--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -24,9 +24,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    // height: 100%;
-    // margin-right: auto;
-    // margin-left: auto;
     border-radius: 5px;
     overflow: hidden;
 
@@ -40,7 +37,6 @@
 
     @media screen and (min-width: 1280px) {
         width: calc((100% - 32px) / 3);
-        // height: 634px;
     }
 }
 
@@ -51,8 +47,6 @@
 }
 
 .film-list__link {
-    // display: flex;
-    // flex-direction: column;  
     width: 100%;
     height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -63,9 +57,16 @@
 }
 
 .film-list__top-wrap {
-    flex-grow: 1;
     border-radius: 5px;
     overflow: hidden;
+
+    @media screen and (min-width: 768px) {
+        height: 455px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        height: 574px;
+    }
 }
 
 .film-data {
@@ -76,7 +77,6 @@
         
     @media screen and (min-width: 1280px) {
         height: 48px; 
-        // display: flex;
         flex-grow: 1;
     }
 }
@@ -87,25 +87,29 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 1.33px;
+    font-size: 10px;
+    line-height: 1.2px;
     text-transform: uppercase;
     color: #000000;
 
+    @media screen and (min-width: 320px) and (max-width: 479px) {
+        line-height: 1.1px;
+    }
+
+
     @media screen and (min-width: 1280px) {
-        font-size: 15px;
-        line-height: 1.2px;
+        font-size: 14px;
+        line-height: 1.1px;
     }
 }
 
 .film-data__info {
     display: flex;
     height: 10px;
-
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 1.33px;
 
     @media screen and (min-width: 1280px) {
@@ -121,7 +125,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 1.33px;
     color: #FF6B08;
 
@@ -139,11 +143,10 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 1.33px;
     color: #FF6B08;
-    // border-left: 1px solid #FF6B08; 
-
+    
     @media screen and (min-width: 1280px) {
         align-items: flex-end;
         font-size: 15px;
