--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,45 +1,46 @@
 <header class="header">
-    <div class="container">
-        <div class="header_wrapper">
-            <nav class="navigation">
-                <a class="logo link" href=" ">
-                    <svg class="logo__icon" width="24" height="24">
-                        <use href="/src/images/general-sprait.svg#icon-film"></use>
-                    </svg>
-                    <span class="logo_text">Filmoteka</span>
-                </a>
-                <ul class="nav_list">
-                    <li class="nav_item">
-                        <a href="" class="link nav_home active">Home</a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="" class="link nav_library ">My Library</a>
-                    </li>
-                </ul>
-            </nav>
-            <form class="search_form" id="search_form">
-                <div class="input-wrapper">
-                <input  
-                type="text"
-                name="query"
-                autocomplete="off"
-                placeholder="Movie search"
-                class="search-field" 
-                />
-                <svg class="search_icon" width="12" height="12">
-                    <use href="/src/images/general-sprait.svg#icon-search-2"></use>
-                </svg>
-                              <!-- <button type="button" class="search_btn">
+  <div class="container">
+    <div class="header_wrapper">
+      <nav class="navigation">
+        <a class="logo link" href=" ">
+          <svg class="logo__icon" width="24" height="24">
+            <use href="/src/images/general-sprait.svg#icon-film"></use>
+          </svg>
+          <span class="logo_text">Filmoteka</span>
+        </a>
+        <ul class="nav_list">
+          <li class="nav_item">
+            <a href="" class="link nav_home active">Home</a>
+          </li>
+          <li class="nav_item">
+            <a href="" class="link nav_library">My Library</a>
+          </li>
+        </ul>
+      </nav>
+      <form class="search_form" id="search_form">
+        <div class="input-wrapper">
+          <input
+            type="text"
+            name="query"
+            autocomplete="off"
+            placeholder="Movie search"
+            class="search-field"
+          />
+          <svg class="search_icon" width="12" height="12">
+            <use href="/src/images/general-sprait.svg#icon-search-2"></use>
+          </svg>
+          <!-- <button type="button" class="search_btn">
                     <svg class="search_icon" width="12" height="12">
                         <use href="/src/images/general-sprait.svg#icon-search-2"></use>
                     </svg>
                 </button> -->
-            </div>
-            </form>
-            
-             <button type="button" class="liberty__btn">WATCHED</button>
-             <button type="button" class="liberty__btn">QUEUE</button>
         </div>
+      </form>
 
-    </div> 
+      <div class="btn-wrapper">
+        <button type="button" class="liberty__btn watched__btn">WATCHED</button>
+        <button type="button" class="liberty__btn queue__btn">QUEUE</button>
+      </div>
+    </div>
+  </div>
 </header>
