--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -9,6 +9,10 @@
     padding-right: 20px;
     padding-left: 20px;
 
+    @media screen and (min-width: 768px) {
+        margin-bottom: 40px;
+    }
+
     @media screen and (min-width: 768px) and (max-width: 1279px) {
         gap: 32px;
     }
@@ -27,8 +31,11 @@
     border-radius: 5px;
     overflow: hidden;
 
-    transform: scale(1);
-    transition: transform 250ms linear;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+    // transform: scale(1);
+    // transition: transform 250ms linear;
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
@@ -45,23 +52,20 @@
 
 .film-list__item:last-child {
     @media screen and (min-width: 768px) {
-        margin-bottom: 40px;
+        margin-bottom: 0px;
     }
 }
 
-.film-list__item:hover,
-.film-list__item:focus {
-    transform: scale(1.03);
-}
+// .film-list__item:hover,
+// .film-list__item:focus {
+//     transform: scale(1.03);
+//     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+// }
 
 .film-list__link {
     width: 100%;
     height: 100%;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover, &:focus {
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-            1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
 }
 
 .film-list__top-wrap {
