shadow and scale

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -34,8 +34,8 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 
-    // transform: scale(1);
-    // transition: transform 250ms linear;
+    transform: scale(1);
+    transition: transform 250ms linear;
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
@@ -56,12 +56,12 @@
     }
 }
 
-// .film-list__item:hover,
-// .film-list__item:focus {
-//     transform: scale(1.03);
-//     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.film-list__item:hover,
+.film-list__item:focus {
+    transform: scale(1.03);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-// }
+}
 
 .film-list__link {
     width: 100%;
