--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,7 +2,7 @@
   <section class="filmoteka section">
         <div class="container">
               <ul class="film-list list">
-                <li class="film-list__item">
+                <!-- <li class="film-list__item">
                     <a href="" class="film-list__link link">
                         <div class="film-list__top-wrap">
                             <picture>
@@ -362,7 +362,7 @@
                         </div>
                       </div>
                   </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </section>
