--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -7,7 +7,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid red;
+  // border: 1px solid red;
   min-width: 320px;
   max-width: 480px;
 
