--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,7 +5,7 @@
   background-position: center;
   background-size: cover;
 
-  max-width: 100%;
+  width: 100%;
   height: 215px;
   padding-top: 40px;
 
@@ -235,11 +235,10 @@
   color: #ffffff;
   background-color: transparent;
   cursor: pointer;
+}
 
-  &:active,
-  &:focus {
-    background: #ff6b01;
-    box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
-    border: transparent;
-  }
+.active-btn {
+  background: #ff6b01;
+  box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+  border: transparent;
 }
