--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     padding-right: 20px;
     padding-left: 20px;
+    justify-content: center;
 
     @media screen and (min-width: 768px) {
         margin-bottom: 40px;
