--- a/src/partials/modal-main.html
+++ b/src/partials/modal-main.html
@@ -1,14 +1,12 @@
 <div class="backdrop js-backdrop is-hidden" data-modal>
   <div class="main-modal js-main-modal" data-modal-close>
-    <button class="btn-close-modal js-btn-close-modal" type="button">X</button>
+    <!-- <button class="btn-close-modal js-btn-close-modal" type="button">
+
+    </button>
     <div class="card-film film">
       <div class="film__poster">
-        <img
-          src="./images/modal/poster-film.jpg"
-          alt="poster"
-          width="375"
-          height="478"
-        />
+        fgfgfgfgfgfgfg
+        <img src="./images/modal/poster-film.jpg" alt="poster" width="375" height="478" />
       </div>
       <div class="film__content">
         <h2 class="film__title">A FISTFUL OF LEAD</h2>
@@ -54,6 +52,6 @@
           <button class="btn-modal film-btn__queue">add to queue</button>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
