--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -242,3 +242,12 @@
   box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
   border: transparent;
 }
+
+.text-in-empty-container {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 16px;
+  padding-top: 50px;
+}
