--- a/src/sass/modal/_modal-main.scss
+++ b/src/sass/modal/_modal-main.scss
@@ -57,45 +57,41 @@
   }
 }
 
-.btn-close-modal{
+.btn-close-modal {
   position: absolute;
   right: 8;
   top: 8;
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   padding: 8px;
   width: 30px;
   height: 30px;
-  stroke:#000000;
+  stroke: #000000;
   // border: 1px solid black;
   background-color: transparent;
   border-radius: 100%;
   border: none;
   transition: background-color 250ms var(--cubic);
+}
 
- 
-  }
+.btn-close-modal svg {
+  width: 14px;
+  height: 14px;
+  transition: scale 250ms var(--cubic);
+}
 
-  .btn-close-modal svg {
-      width: 14px;
-      height: 14px;
-      transition: scale 250ms var(--cubic);
-  }
+.btn-close-modal:hover,
+.btn-close-modal:focus {
+  background-color: #ff6b01;
+}
 
-  .btn-close-modal:hover,
-    .btn-close-modal:focus{
-      background-color: #ff6b01;
-  }
+.btn-close-modal:hover svg,
+.btn-close-modal:focus svg {
+  stroke: #fff;
 
-    .btn-close-modal:hover  svg,
-    .btn-close-modal:focus svg{
-     stroke:#fff;
-     
-     transform: scale(1.3);
-     
-    }
-
+  transform: scale(1.3);
+}
 
 .film {
   @include tablet {
@@ -257,7 +253,8 @@ item-right--popularity {
   margin-left: 8px;
 }
 
-.btn-modal,.btn-play-trailer {
+.btn-modal,
+.btn-play-trailer {
   width: 110px;
   height: 44px;
   font-family: 'Roboto';
@@ -284,16 +281,9 @@ item-right--popularity {
     background: #ff6b01;
     border: transparent;
   }
-
 }
 
-.btn-play-trailer{
+.btn-play-trailer {
   width: 100%;
   margin-top: 10px;
-}
-
-.btn-modal.is-active {
-  color: #fff;
-  background: #ff6b01;
-  border: transparent;
 }
