--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,5 +1,5 @@
 <div class="backdrop-team is-hidden" data-modal-team>
-  <div class="team-modal js-main-modal" modal-close>
+  <div class="team-modal js-main-modal" data-teammodal-close>
     <button type="button" class="btn-close-modal-team">X</button>
     <div class="team-container">
       <div class="team-title-all">
@@ -55,7 +55,6 @@
                 class="team-img"
                 src="/src/images/viktoriia-chumak.jpg"
                 alt="Учасник"
-                width="160px"
             /></a>
             <div class="team-block">
               <p class="team-name">Вікторія Чумак</p>
