--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,6 @@
 <main class="main">
   <section class="filmoteka section">
+    <h2 style="display: none;">Filmoteka</h2>
         <div class="container">
               <ul class="film-list list">
                 <!-- <li class="film-list__item">
