--- a/src/sass/modal/_modal-team.scss
+++ b/src/sass/modal/_modal-team.scss
@@ -72,8 +72,7 @@
 .team-modal {
   padding: 48px 20px 40px;
   width: 280px;
-  height: 700px;
-  height: px;
+  height: 90vh;
   background-color: #f7f7f7;
   position: absolute;
   top: 50%;
