--- a/src/sass/modal/_modal-team.scss
+++ b/src/sass/modal/_modal-team.scss
@@ -83,13 +83,15 @@
   transition: transform 300ms var(--cubic);
 
   @media screen and (min-width: 480px) and (max-width: 767px) {
-    height: 700px;
+    height: 90vh;
+    max-height: 700px;
     width: 460px;
   }
 
   @include tablet {
     width: 704px;
-    height: 552px;
+    max-height: 552px;
+    height: 90vh;
   }
 
   @include desctop {
