fix header btn , form action

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
           </li>
         </ul>
       </nav>
-      <form class="search_form" id="search_form">
+      <form class="search_form" id="search_form" action="#" >
         <div class="input-wrapper">
           <input
             type="text"
@@ -26,14 +26,11 @@
             placeholder="Movie search"
             class="search-field"
           />
-          <svg class="search_icon" width="12" height="12">
-            <use href="/src/images/general-sprait.svg#icon-search-2"></use>
-          </svg>
-          <!-- <button type="button" class="search_btn">
+           <button type="submit" class="search_btn">
                     <svg class="search_icon" width="12" height="12">
                         <use href="/src/images/general-sprait.svg#icon-search-2"></use>
                     </svg>
-                </button> -->
+          </button>
         </div>
       </form>
 
