--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -130,16 +130,17 @@
 .search_btn {
   position: absolute;
   top: 0;
-  width: 12px;
-  height: 12px;
+  right: 0px;
+  width: 40px;
+  height: 25px;
   background-color: transparent;
   border: none;
 }
 
 .search_icon {
   position: absolute;
-  top: 3px;
-  right: 0;
+  top: 5px;
+  right: 15px;
   display: block;
 }
 
