--- a/src/sass/modal/_modal-main.scss
+++ b/src/sass/modal/_modal-main.scss
@@ -40,16 +40,15 @@
   overflow: auto;
   padding: 48px 20px 40px 20px;
   background-color: #fff;
-  // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-   
-  @media screen and (min-width: 768px) {
+    
+  @include tablet {
     padding: 40px 72px 40px 36px;
     width: 704px;
     // height: 552px;
     height: 100%;
   }
 
-  @media screen and (min-width: 1280px)  {
+  @include desctop {
     padding: 40px 12px;
     width: 806px;
     // height: 558px;
