--- a/src/sass/modal/_modal-main.scss
+++ b/src/sass/modal/_modal-main.scss
@@ -35,24 +35,30 @@
   left: 50%;
   transform: translate(-50%, -50%);
   transition: transform 300ms var(--cubic);
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  max-width: 90%;
+  max-height: 95%;
+  // height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: 48px 20px 40px 20px;
   background-color: #fff;
+
+  margin-top: auto;
+  margin-bottom: auto;
     
   @include tablet {
     padding: 40px 72px 40px 36px;
-    width: 704px;
+    // width: 704px;
     // height: 552px;
-    height: 100%;
+    // height: 100%;
   }
 
   @include desctop {
     padding: 40px 12px;
-    width: 806px;
-    // height: 558px;
-    height: 100%;
+    max-height: 80%;
+    max-width: 806px;
+    // height: 100%;
+    // display: flex;
   }
 }
 
@@ -149,14 +155,14 @@
 }
 
 .film__content {
-  min-width: 240px;
+  // min-width: 240px;
 
   @include tablet {
-    min-width: 264px;
+    // min-width: 264px;
   }
 
   @include desctop {
-    min-width: 391px;
+    // min-width: 391px;
   }
 }
 
