bugfixed working localStorage

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -163,3 +163,12 @@
     line-height: 1.2px;
   }
 }
+
+.text-in-empty-container {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 16px;
+  padding-top: 50px;
+}
