--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -238,17 +238,8 @@
   cursor: pointer;
 }
 
-.active-btn {
+.active-liberty-btn {
   background: #ff6b01;
   box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
   border: transparent;
-}
-
-.text-in-empty-container {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 16px;
-  padding-top: 50px;
 }
