--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .loadMore {
   display: flex;
   align-items: center;
@@ -35,7 +31,7 @@
 
   &:hover,
   &:focus {
-    border: 1px solid  #ff6b08;
+    border: 1px solid #ff6b08;
     cursor: pointer;
   }
 
@@ -64,15 +60,28 @@
 }
 
 .back {
-  display: flex;
+  display: none;
   border: none;
   background: #f7f7f7;
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
 .next {
-  display: flex;
+  display: none;
   border: none;
   background: #f7f7f7;
   transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.block--margin {
+  padding-top: 0;
+}
+
+.show__button,
+.points {
+  display: none;
+
+  @media screen and (min-width: 480px) {
+    display: flex;
+  }
 }
