--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,385 +1,25 @@
 <main class="main">
   <section class="filmoteka section">
-    <h1 style="display: none;">Filmoteka</h1>
-        <div class="container">
-            <ul class="film-list list">
-                <!-- <li class="film-list__item">
-                    <a href="" class="film-list__link link">
-                        <div class="film-list__top-wrap">
-                            <picture>
-                                <source
-                                    srcset="
-                                        ./images/film-1-desk-1x.jpg 1x,
-                                        ./images/film-1-desk-1x.jpg 2x 
-                                    "
-                                    media="(min-width: 1280px)"
-                                />
-                                <source
-                                    srcset="
-                                        ./images/film-1-tab-1x.jpg 1x,
-                                        ./images/film-1-tab-1x.jpg 2x 
-                                    "
-                                    media="(min-width: 768px)"
-                                />
-                                <source
-                                    srcset="
-                                        ./images/film-1-mob-1x.jpg 1x,
-                                        ./images/film-1-mob-1x.jpg 2x 
-                                    "
-                                    media="(max-width: 480px)"
-                                />
-                                <img 
-                                    src="./images/film-1-mob-1x.jpg" 
-                                    alt="film" 
-                                />
-                            </picture> 
-                        </div>
-                        <div class="film-data">
-                            <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                            <div class="film-data__info">
-                                <p class="film-data__genres">Drama, Comedy</p>
-                                <p class="film-data__year">| 2019</p>
-                            </div>
-                            
-                        </div>
-                    </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li>
-                <li class="film-list__item">
-                  <a href="" class="film-list__link link">
-                      <div class="film-list__top-wrap">
-                          <picture>
-                              <source
-                                  srcset="
-                                      ./images/film-1-desk-1x.jpg 1x,
-                                      ./images/film-1-desk-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 1280px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-tab-1x.jpg 1x,
-                                      ./images/film-1-tab-1x.jpg 2x 
-                                  "
-                                  media="(min-width: 768px)"
-                              />
-                              <source
-                                  srcset="
-                                      ./images/film-1-mob-1x.jpg 1x,
-                                      ./images/film-1-mob-1x.jpg 2x 
-                                  "
-                                  media="(max-width: 480px)"
-                              />
-                              <img 
-                                  src="./images/film-1-mob-1x.jpg" 
-                                  alt="film" 
-                              />
-                          </picture> 
-                      </div>
-                      <div class="film-data">
-                          <h2 class="film-data__title">ONCE UPON A TIME... IN HOLLYWOOD</h2>
-                          <div class="film-data__info">
-                            <p class="film-data__genres">Drama, Comedy</p>
-                            <p class="film-data__year">| 2019</p>
-                        </div>
-                      </div>
-                  </a>
-                </li> -->
-            </ul>
-        </div>
-    </section>
+    <h1 style="display: none">Filmoteka</h1>
     <div class="container">
-    <div class="loadMore">
-      <div class="page back" data-nav="back">
-        <svg width="16" height="16">
-          <use href="./images/icons.svg#icon-left"></use>
-        </svg>
-      </div>
-      <div class="pages"></div>
-      <div class="page next" data-nav="next">
-        <svg width="16" height="16">
-          <use href="./images/icons.svg#icon-right"></use>
-        </svg>
+      <ul class="film-list list"></ul>
+    </div>
+  </section>
+  <section class="section block--margin">
+    <div class="container">
+      <div class="loadMore">
+        <div class="page back" data-nav="back">
+          <svg width="16" height="16">
+            <use href="./images/icons.svg#icon-left"></use>
+          </svg>
+        </div>
+        <div class="pages"></div>
+        <div class="page next" data-nav="next">
+          <svg width="16" height="16">
+            <use href="./images/icons.svg#icon-right"></use>
+          </svg>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 </main>
