--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,17 +1,18 @@
 .section {
-  padding-top: 20px;
+  padding: 20px 0 40px 0;
+
+  @media screen and (min-width: 481px) {
+    padding: 32px 0 40px 0;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 60px 0;
+  }
 }
 
 .film-list {
   display: flex;
   flex-wrap: wrap;
-  padding-right: 20px;
-  padding-left: 20px;
-  justify-content: center;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 40px;
-  }
+  justify-content: flex-start;
 
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     gap: 32px;
@@ -31,11 +32,9 @@
   border-radius: 5px;
   overflow: hidden;
 
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-
   transform: scale(1);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
     margin-bottom: 20px;
@@ -59,7 +58,8 @@
 .film-list__item:hover,
 .film-list__item:focus {
   transform: scale(1.03);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .film-list__link {
@@ -83,10 +83,9 @@
 .film-data {
   height: 32px;
   padding-top: 10px;
-  border: 1px solid #eeeeee;
-  border-top: none;
 
   @media screen and (min-width: 1280px) {
+    padding-top: 12px;
     height: 48px;
     flex-grow: 1;
   }
@@ -94,33 +93,32 @@
 
 .film-data__title {
   display: block;
-  height: 10px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
-  line-height: 1.2px;
+  line-height: 1.2;
   text-transform: uppercase;
   color: #000000;
 
   @media screen and (min-width: 320px) and (max-width: 479px) {
-    line-height: 1.1px;
+    line-height: 1.1;
   }
 
   @media screen and (min-width: 1280px) {
     font-size: 14px;
-    line-height: 1.1px;
+    line-height: 1.1;
   }
 }
 
 .film-data__info {
   display: flex;
-  height: 10px;
+  align-items: center;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
-  line-height: 1.33px;
+  line-height: 1.33;
 
   @media screen and (min-width: 1280px) {
     height: 20px;
@@ -131,36 +129,35 @@
 
 .film-data__genres {
   display: flex;
-  height: 10px;
+  align-items: center;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
-  line-height: 1.33px;
+  line-height: 1.33;
   color: #ff6b08;
 
   @media screen and (min-width: 1280px) {
-    align-items: flex-end;
     font-size: 15px;
-    line-height: 1.2px;
+    line-height: 1.2;
   }
 }
 
 .film-data__year {
   display: flex;
-  height: 10px;
-  padding-left: 5px;
+  align-items: center;
+  margin-left: 5px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
-  line-height: 1.33px;
+  line-height: 1.33;
   color: #ff6b08;
 
   @media screen and (min-width: 1280px) {
     align-items: flex-end;
     font-size: 15px;
-    line-height: 1.2px;
+    line-height: 1.2;
   }
 }
 
