--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -31,11 +31,9 @@
   border-radius: 5px;
   overflow: hidden;
 
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-
   transform: scale(1);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 350ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
     margin-bottom: 20px;
@@ -58,8 +56,8 @@
 
 .film-list__item:hover,
 .film-list__item:focus {
-  transform: scale(1.03);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(1.05);
+  box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
 }
 
 .film-list__link {
@@ -69,6 +67,8 @@
 
 .film-list__top-wrap {
   border-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   overflow: hidden;
 
   @media screen and (min-width: 768px) {
@@ -81,10 +81,10 @@
 }
 
 .film-data {
+  background-color: transparent;
   height: 32px;
-  padding-top: 10px;
-  border: 1px solid #eeeeee;
-  border-top: none;
+  padding-top: 15px;
+  padding-left: 5px;
 
   @media screen and (min-width: 1280px) {
     height: 48px;
@@ -101,7 +101,7 @@
   font-size: 10px;
   line-height: 1.2px;
   text-transform: uppercase;
-  color: #000000;
+  color: #696969;
 
   @media screen and (min-width: 320px) and (max-width: 479px) {
     line-height: 1.1px;
