--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,6 +2,7 @@
   background-color: #f7f7f7;
   min-width: 320px;
   text-align: center;
+  margin-top: 20px;
   @media screen and (max-width: 767px) {
     padding-top: 29px;
 
@@ -15,6 +16,10 @@
     padding-top: 29px;
     padding-bottom: 29px;
   }
+}
+
+.dark-footer {
+  background-color: #545454;
 }
 
 .footer-text-all {
@@ -73,4 +78,8 @@
 .footer-modal:hover,
 .footer-modal:focus {
   color: #ff6b08;
+}
+
+.dark-footer-text {
+  color: #dddddd;
 }
