--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,7 @@
+:root {
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.26), rgba(0, 0, 0, 0.26)),
     url(/src/images/header\ mobile\ 1x.jpg);
@@ -50,6 +54,11 @@
 
 .logo {
   display: block;
+  transition: transform 250ms var(--cubic);
+
+  &:hover {
+    transform: scale(1.15);
+  }
 }
 
 .logo__icon {
@@ -64,11 +73,15 @@
   font-size: 30px;
   line-height: 35px;
   color: #ffffff;
+  transition: color 400ms var(--cubic);
   @media screen and (min-width: 768px) {
     display: inline-block;
   }
   @media screen and (min-width: 1280px) {
     display: inline-block;
+  }
+  &:hover {
+    color: #ff6b08;
   }
 }
 
@@ -99,7 +112,7 @@
 }
 
 .search-field {
-  width: 280px;
+  max-width: 280px;
   border: transparent;
   border-bottom: 0.5px solid #ffffff;
   background-color: transparent;
@@ -140,15 +153,61 @@
 .search_icon {
   position: absolute;
   top: 5px;
-  right: 15px;
+  right: 10px;
   display: block;
+  transition: transform 250ms var(--cubic);
+
+  &:hover {
+    transform: scale(1.15);
+  }
 }
 
-.navigation {
+.top_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
+}
+
+.bottom_container {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.button-switcher {
+  position: relative;
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #000;
+  border: none;
+  border-radius: 15px;
+  transition: transform 250ms var(--cubic);
+  &:hover {
+    transform: scale(1.15);
+  }
+}
+
+.moon-icon {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.sun-icon {
+  position: absolute;
+  width: 90%;
+  height: 90%;
+}
+
+.hidden {
+  visibility: hidden;
+  display: none;
 }
 
 .nav_list {
@@ -166,6 +225,11 @@
   line-height: 14px;
   text-transform: uppercase;
   color: #ffffff;
+  transition: color 250ms var(--cubic), transform 250ms var(--cubic);
+  &:hover {
+    color: #ff6b08;
+    transform: scale(1.15);
+  }
 }
 
 // LIBRARY PAGE
@@ -236,10 +300,19 @@
   color: #ffffff;
   background-color: transparent;
   cursor: pointer;
+  transition: background-color 250ms var(--cubic), border 250ms var(--cubic);
+
+  &:hover {
+    background-color: #ff6b08;
+    border: transparent;
+  }
 }
 
 .active-liberty-btn {
   background: #ff6b01;
   box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
   border: transparent;
+  &:hover {
+    background-color: #ff6b48;
+  }
 }
